style: fix z-index when both dragging and resizing for resizeLeft

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,17 @@
 .react-grid-item.cssTransforms {
   transition-property: transform;
 }
-.react-grid-item.resizing {
-  z-index: 1;
-  will-change: width, height;
-}
 
 .react-grid-item.react-draggable-dragging {
   transition: none;
   z-index: 3;
   will-change: transform;
+}
+
+.react-grid-item.resizing,
+.react-grid-item.react-draggable-dragging.resizing {
+  z-index: 1;
+  will-change: width, height;
 }
 
 .react-grid-item.react-grid-placeholder {
